--- a/PayLessTax/GoogleService-Info.plist
+++ b/PayLessTax/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>470414759491-ebgqmmlpgpitipg1ak1ajuqf2cckc54o.apps.googleusercontent.com</string>
+	<string>470414759491-6mubhvqhk2u52e91n31aa7hcj16flteg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.470414759491-ebgqmmlpgpitipg1ak1ajuqf2cckc54o</string>
+	<string>com.googleusercontent.apps.470414759491-6mubhvqhk2u52e91n31aa7hcj16flteg</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCgYHkxRS89tGwrPuGuzluXAgXViWCRgPs</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.smohcodes.PayLessTax</string>
+	<string>com.smohcodes.PayLessTax2</string>
 	<key>PROJECT_ID</key>
 	<string>paylesstax-8352b</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:470414759491:ios:7b601c6340002623</string>
+	<string>1:470414759491:ios:562936324e0f1995</string>
 	<key>DATABASE_URL</key>
 	<string>https://paylesstax-8352b.firebaseio.com</string>
 </dict>
